--- a/src/app/stage/stage.component.scss
+++ b/src/app/stage/stage.component.scss
@@ -1,13 +1,9 @@
 .stage{
+  width: 100%;
   button{
     z-index: 1;
   }
-  display: flexbox;
-  width: 70%;
-  height: 500px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 15%;
+  display: flex;
   .protagonist{
     position: absolute;
     top: 230px;
@@ -45,12 +41,11 @@
 
   }
   .background{
-    position: absolute;
-    width: 70%;
-    max-height:500px;
-    min-width: 800px;
-    top: 60px;
-    left: 15%;
+    background-size: contain;
+    width: 100%;
+    height: 70%;
+    justify-self: center;
+
     border-radius: 5px;
     z-index: 0;
   }
