--- a/src/app/action-menu/action-menu.component.html
+++ b/src/app/action-menu/action-menu.component.html
@@ -4,8 +4,7 @@
        [disabled]="enemyHp > 0"
         mat-raised-button
         (click)="menuModal()">
-        Open Inventory
-  
+        Inventory
       </button>
     </div>
     <!-- <div class="merchant">
